; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_dmfe.c_phy_read_1bit.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/tulip/extr_dmfe.c_phy_read_1bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @phy_read_1bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phy_read_1bit(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @outl(i32 327680, i64 %4)
  %6 = call i32 @udelay(i32 1)
  %7 = load i64, i64* %2, align 8
  %8 = call i32 @inl(i64 %7)
  %9 = ashr i32 %8, 19
  %10 = and i32 %9, 1
  store i32 %10, i32* %3, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @outl(i32 262144, i64 %11)
  %13 = call i32 @udelay(i32 1)
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @outl(i32, i64) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @inl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
